--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "loadash": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
@@ -19,6 +20,7 @@
     },
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
+        "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "primevue": "^4.0.5",
         "vue3-data-table": "^1.0.2",
