--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.1.2",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "primevue": "^4.0.5",
