--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.1.2",
+        "datatables.net": "^2.1.8",
+        "datatables.net-dt": "^2.1.8",
+        "datatables.net-vue3": "^3.0.2",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "primevue": "^4.0.5",
