--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "primevue": "^4.0.5",
+        "vue-sweetalert2": "^5.0.11",
         "vue3-data-table": "^1.0.2",
         "ziggy-js": "^2.3.0"
     }
