--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
         "loadash": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
-        "vite": "^5.0",
+        "vite": "^6.2.5",
         "vue": "^3.4.0"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.1.2",
+        "chart.js": "^4.4.8",
         "datatables.net": "^2.1.8",
         "datatables.net-dt": "^2.1.8",
         "datatables.net-vue3": "^3.0.2",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "primevue": "^4.0.5",
+        "vue-chartjs": "^5.3.2",
         "vue-sweetalert2": "^5.0.11",
         "vue3-data-table": "^1.0.2",
         "ziggy-js": "^2.3.0"
