--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "rap2hpoutre/fast-excel": "^5.5",
+        "spatie/laravel-permission": "^6.17",
         "tecnickcom/tcpdf": "^6.7",
         "tightenco/ziggy": "^2.0"
     },
