--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=WarePro
 APP_ENV=local
-APP_KEY=base64:L6GXLiCep59an+Kc7MQDxsoP58vi/x3hC0uZfKmxuYg=
+APP_KEY=base64:HvB1IGaOu348rusiRXMyBfJg4ZNtksIDy/6e3tCVRFU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost/WarePro.v2
+APP_URL=http://localhost/WarePro.v2/public
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
