--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "phpoffice/phpspreadsheet": "^5.1",
         "phpoffice/phpword": "^1.3",
         "rap2hpoutre/fast-excel": "^5.5",
         "spatie/laravel-permission": "^6.17",
